[feature/auth]final user
